// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LambdaFunction Construct Snapshot Tests should generate consistent CloudFormation template for complex config 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "TestLambda70F93640": {
      "DependsOn": [
        "TestLambdaServiceRoleDefaultPolicy10C59332",
        "TestLambdaServiceRole4048AEF1",
      ],
      "Properties": {
        "Architectures": [
          "x86_64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "df550ce743474088f5a6f3fb4299997518c34d8fb95ed4129849c5232e008c79.zip",
        },
        "Description": "Test Lambda with full config",
        "Environment": {
          "Variables": {
            "VAR1": "value1",
            "VAR2": "value2",
          },
        },
        "Handler": "index.handler",
        "Layers": [],
        "LoggingConfig": {
          "LogFormat": "Text",
          "LogGroup": {
            "Ref": "TestLambdaTestLambdaLogGroup89C30E45",
          },
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "TestLambdaServiceRole4048AEF1",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 60,
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestLambdaServiceRole4048AEF1": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TestLambdaServiceRoleDefaultPolicy10C59332": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject",
                "s3:PutObject",
              ],
              "Effect": "Allow",
              "Resource": "arn:aws:s3:::my-bucket/*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestLambdaServiceRoleDefaultPolicy10C59332",
        "Roles": [
          {
            "Ref": "TestLambdaServiceRole4048AEF1",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TestLambdaTestLambdaLogGroup89C30E45": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 7,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`LambdaFunction Construct Snapshot Tests should generate consistent CloudFormation template for minimal config 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "TestLambda70F93640": {
      "DependsOn": [
        "TestLambdaServiceRole4048AEF1",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "10eb9d09fdc04a561df6e9b42d36ddf50934fae3b100a5d56ac2849b22d2706d.zip",
        },
        "Environment": {
          "Variables": {},
        },
        "Handler": "index.handler",
        "Layers": [],
        "LoggingConfig": {
          "LogFormat": "Text",
          "LogGroup": {
            "Ref": "TestLambdaTestLambdaLogGroup89C30E45",
          },
        },
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "TestLambdaServiceRole4048AEF1",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Timeout": 5,
      },
      "Type": "AWS::Lambda::Function",
    },
    "TestLambdaServiceRole4048AEF1": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "TestLambdaTestLambdaLogGroup89C30E45": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
